--- a/Module 2/module2-assignment.html
+++ b/Module 2/module2-assignment.html
@@ -10,4 +10,11 @@
 
 <body>
 
-	
+	<h1>Types of dogs</h1>
+
+	<div>Small dogs</div>
+	<div>Medium dogs</div>
+	<div>Large dogs</div>
+
+</body>
+</html>
