--- a/Module 2/module2-assignment.html
+++ b/Module 2/module2-assignment.html
@@ -8,16 +8,16 @@
 	<link rel="stylesheet" href="CSS/styles.css"> <!-- rel = relationship between href and this file --> 
 </head>
 
-<body>
+<body id="container">
 
 	<h1>Types of dogs</h1>
-
-	<div>
-		<div id="content" class="lightOrangeBackground col-desk-3 col-tab-6 col-mob-12">
+	
+	<div id="container">
+		<div id="content" class="lightOrangeBackground col-desk-3 col-tab-4 col-mob-12">
 			<div id="title" class="yellowBackground">Small dogs</div>
 			<div>Small dogs are pretty small. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum lore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
 		</div>
-		<div id="content" class="orangeBackground col-desk-3 col-tab-6 col-mob-12">
+		<div id="content" class="orangeBackground col-desk-3 col-tab-4 col-mob-12">
 			<div id="title" class="purpleBackground whiteText">Medium dogs</div>
 			<div>Medium are dogs are a little bigger. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum lore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
 		</div>
