--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -1,1 +1,72 @@
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Food, LLC</title>
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/styles.css">
+</head>
 
+<body>
+	<header>
+		<nav class="navbar navbar-default navbar-static-top" id="header-nav">
+			<div class="container">
+				<div class="navbar-header">
+					<a href="index.html" class="pull-left">
+						<div class="navbar-brand">Food, LLC</div>
+					</a>
+				</div> <!-- END navbar-header --> 
+				<!-- Single button -->
+				<div class="btn-group">
+				  <button type="button" class="btn btn-default dropdown-toggle visible-xs" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				    Menu <span class="caret"></span>
+				  </button>
+				  <ul class="dropdown-menu">
+				    <li><a href="#">Chicken</a></li>
+				    <li><a href="#">Beef</a></li>
+				    <li><a href="#">Sushi</a></li>
+				  </ul>
+				</div>
+			</div> <!-- END container --> 
+		</nav> <!-- END header-nav --> 
+	</header>
+
+	<div id="main-content" class="container">
+		<h1 class="text-center">Our Menu</h1>
+		<div class="jumbotron lightOrangeBackground col-xs-12 col-sm-12 col-md-12 col-lg-12">
+			<h2 id="chicken">Chicken</h2>
+				<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+
+		</div>
+		<div class="jumbotron orangeBackground col-xs-12 col-sm-12 col-md-12 col-lg-12">
+			<h2 id="beef">Beef</h2>
+				<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+		</div>
+		<div class="jumbotron greenBackground col-xs-12 col-sm-12 col-md-12 col-lg-12">			
+			<h2 id="sushi">Sushi</h2>
+				<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+		</div>
+	</div>
+
+	<!-- jQuery (Bootstrap JS plugins depend on it) -->
+	<script src="js/jquery-3.2.1.js"></script>
+	<script src="js/bootstrap.js"></script>
+</body>
+</html>
