--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -19,10 +19,12 @@
 					</a>
 				</div> <!-- END navbar-header --> 
 				<!-- Single button -->
-				<div class="btn-group">
-				  <button type="button" class="btn btn-default dropdown-toggle visible-xs" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-				    Menu <span class="caret"></span>
-				  </button>
+			  <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" data-target="#navbarmenu" aria-expanded="false">
+			    <span class="icon-bar"></span>
+			    <span class="icon-bar"></span>
+			    <span class="icon-bar"></span>
+			  </button>
+			  <div id="navbarmenu">
 				  <ul class="dropdown-menu">
 				    <li><a href="#">Chicken</a></li>
 				    <li><a href="#">Beef</a></li>
