--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -11,7 +11,7 @@
 
 <body>
 	<header>
-		<nav class="navbar navbar-default navbar-static-top" id="header-nav">
+		<nav class="navbar navbar-default" id="header-nav">
 			<div class="container">
 				<div class="navbar-header">
 					<a href="index.html" class="pull-left">
