--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -1,74 +1,94 @@
 <!doctype html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Food, LLC</title>
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/styles.css">
-</head>
-
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Food, LLC</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+  </head>
 <body>
-	<header>
-		<nav class="navbar navbar-default" id="header-nav">
-			<div class="container">
-				<div class="navbar-header">
-					<a href="index.html" class="pull-left">
-						<div class="navbar-brand">Food, LLC</div>
-					</a>
-				</div> <!-- END navbar-header --> 
-				<!-- Single button -->
-			  <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" data-target="#navbarmenu" aria-expanded="false">
-			    <span class="icon-bar"></span>
-			    <span class="icon-bar"></span>
-			    <span class="icon-bar"></span>
-			  </button>
-			  <div id="navbarmenu">
-				  <ul class="dropdown-menu">
-				    <li><a href="#">Chicken</a></li>
-				    <li><a href="#">Beef</a></li>
-				    <li><a href="#">Sushi</a></li>
-				  </ul>
-				</div>
-			</div> <!-- END container --> 
-		</nav> <!-- END header-nav --> 
-	</header>
+  <header>
+    <nav id="header-nav" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <div class="navbar-brand">
+            Food, LLC
+          </div>
 
-	<div id="main-content" class="container">
-		<h1 class="text-center">Our Menu</h1>
-		<div class="jumbotron lightOrangeBackground col-xs-12 col-sm-12 col-md-12 col-lg-12">
-			<h2 id="chicken">Chicken</h2>
-				<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        
+        <div id="collapsable-nav" class="collapse navbar-collapse">
+           <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">            
+            <li>
+              <a href="#Chicken">
+                Chicken
+              </a>
+            </li>
+            <li>
+              <a href="#Sushi">
+                Sushi
+              </a>
+            </li>
+            <li>
+              <a href="#Beef">
+                Beef
+              </a>
+            </li>
+          </ul><!-- #nav-list -->
+        </div><!-- .collapse .navbar-collapse -->
+      </div><!-- .container -->
+    </nav><!-- #header-nav -->
+  </header>
 
-		</div>
-		<div class="jumbotron orangeBackground col-xs-12 col-sm-12 col-md-12 col-lg-12">
-			<h2 id="beef">Beef</h2>
-				<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-		</div>
-		<div class="jumbotron greenBackground col-xs-12 col-sm-12 col-md-12 col-lg-12">			
-			<h2 id="sushi">Sushi</h2>
-				<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-		</div>
-	</div>
+  <div id="main-content" class="container">
+    <h1 class = "text-center">Our Menu</h1>
+    <div class="jumbotron lightOrangeBackground">
+      <h2 id="Chicken">Chicken</h2>
+      <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+    </div>
+    <div class="jumbotron orangeBackground">
+      <h2 id="Sushi">Sushi</h2>
+      <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+    </div>
+    <div class="jumbotron greenBackground">
+      <h2 id="Beef">Beef</h2>
+      <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+    </div>
 
-	<!-- jQuery (Bootstrap JS plugins depend on it) -->
-	<script src="js/jquery-3.2.1.js"></script>
-	<script src="js/bootstrap.js"></script>
+  </div><!-- End of #main-content -->
+
+
+  <!-- jQuery (Bootstrap JS plugins depend on it) -->
+  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
