--- a/module3-solution/Attempt2/index.html
+++ b/module3-solution/Attempt2/index.html
@@ -52,7 +52,7 @@
 
   <div id="main-content" class="container">
     <h1 class = "text-center">Our Menu</h1>
-    <div class="jumbotron lightOrangeBackground">
+    <div class="jumbotron lightOrangeBackground col-xs-12 col-sm-12 col-md-12 col-lg-12">
       <h2 id="Chicken">Chicken</h2>
       <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -62,7 +62,7 @@
       proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </div>
     </div>
-    <div class="jumbotron orangeBackground">
+    <div class="jumbotron orangeBackground col-xs-12 col-sm-12 col-md-12 col-lg-12">
       <h2 id="Sushi">Sushi</h2>
       <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -72,7 +72,7 @@
       proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </div>
     </div>
-    <div class="jumbotron greenBackground">
+    <div class="jumbotron greenBackground col-xs-12 col-sm-12 col-md-12 col-lg-12">
       <h2 id="Beef">Beef</h2>
       <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
